<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SightsListActivity">

    <TextView
        android:id="@+id/sightListGreetings"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:background="?attr/colorBackgroundFloating"
        android:fontFamily="@font/roboto_black"
        android:paddingTop="54dp"
        android:text="@string/loginGreetings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal" />


    <ListView
        android:id="@+id/mainLV"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_list_view"
        android:divider="@null" />


    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/toggle_button_selector"
        android:backgroundTint="?attr/colorButtonNormal"
        android:gravity="center"
        android:textAllCaps="true"

        android:textColor="?android:attr/positiveButtonText"
        android:textOff="@string/sightActivityShowDistance"
        android:textOn="@string/sightActivityHideDistance" />
    <!--android:background="@color/white"-->


</LinearLayout>
