<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView

        android:id="@+id/mainTV"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:background="?attr/colorBackgroundFloating"

        android:paddingTop="54dp"
        android:text="@string/loginGreetings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_background"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"

            android:gravity="bottom|start"
            android:paddingBottom="5dp"
            android:text="@string/loginFirstName" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="?attr/colorAccent"
            android:inputType="textCapWords"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"

            android:gravity="bottom|start"
            android:paddingBottom="5dp"
            android:text="@string/loginLastName" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="?attr/colorAccent"
            android:inputType="textCapWords"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"

            android:gravity="bottom|start"
            android:paddingBottom="5dp"
            android:text="@string/loginEmail" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="?attr/colorAccent"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="?attr/colorButtonNormal"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="?android:attr/positiveButtonText"
            app:cornerRadius="100dp" />


    </LinearLayout>


</LinearLayout>